--- a/frontend/src/component/Game.css
+++ b/frontend/src/component/Game.css
@@ -9,35 +9,37 @@
 }
 
 .board {
-    display: grid;
-    grid-template-columns: repeat(15, 40px);
-    grid-template-rows: repeat(15, 40px);
-    gap: 1px;
-    background-color: #d9b38c;
-    padding: 10px;
+    position: relative;
+    width: 600px;
+    height: 600px;
+    background-color: #f5deb3;
     border: 2px solid #8b4513;
+    background-image:
+        linear-gradient(to right, black 1px, transparent 1px),
+        linear-gradient(to bottom, black 1px, transparent 1px);
+    background-size: 40px 40px;
 }
 
 .cell {
     width: 40px;
     height: 40px;
-    background-color: #f5deb3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+    position: relative;
 }
 
-.piece.black {
+.piece {
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.piece.black {
     background-color: black;
 }
 
 .piece.white {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
     background-color: white;
 }
