--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@ body, html {
     background-color: #121212;
     color: white;
     height: 100%;
-    background: url('https://oss.streamnz.com/streamnz/background-pic2.png') no-repeat center center fixed;
+    background: url('https://cdn.streamnz.com/background-pic2.png') no-repeat center center fixed;
     background-size: cover;
 }
 
